# manigen

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
manigen/: cli.py  core.py
tests/: test_cli.py  test_core.py
