[project]
name = "mangen"
version = "0.1.0"
description = "mangen — fast and reliable manifest generator for ML/DL datasets"
readme = "README.md"
authors = [
    { name = "ash1ra" }
]
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[project.scripts]
mangen = "mangen.cli:main"
