[project]
name = "manigen"
version = "1.0.0"
description = "Fast and reliable manifest generator for ML/DL datasets"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "ash1ra" }]
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
	"pytest>=9.0.2",
	"ruff>=0.15.4",
]

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
manigen = "manigen.cli:main"

